--- a/index.html
+++ b/index.html
@@ -2,66 +2,97 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./styles/style.css">
-  <title>Bootstrap</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
+    <title>Bootstrap</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
-    <div class="container">
-      <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menudesktop"
-        aria-controls="menudesktop" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
+        <div class="container">
+            <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menudesktop"
+                aria-controls="menudesktop" aria-expanded="false" aria-label="Alterna navegação">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <div class="collapse navbar-collapse  justify-content-end" id="menudesktop">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Habilidades</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Sobre</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Portifólios</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100 img-carrossel" src="assets/wave-1.jpg" alt="Primeiro Slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 img-carrossel" src="assets/wave-2.jpg" alt="Segundo Slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 img-carrossel" src="assets/wave-3.jpg" alt="Terceiro Slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Anterior</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Próximo</span>
-    </a>
-  </div>
-  <script src="./js/jquery-3.4.1.min.js"></script>
-  <script src="./js/bootstrap.min.js"></script>
-  <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
+            <div class="collapse navbar-collapse  justify-content-end" id="menudesktop">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Habilidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Portifólios</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <header>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100 img-carrossel" src="assets/wave-1.jpg" alt="Primeiro Slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-carrossel" src="assets/wave-2.jpg" alt="Segundo Slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100 img-carrossel" src="assets/wave-3.jpg" alt="Terceiro Slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Próximo</span>
+            </a>
+        </div>
+    </header>
+
+    <section class="text-center m-4">
+        <h3>Adela Simone</h3>
+        <h5 class="font-italic font-weight-light m-2">Desenvolvedora front-end</h5>
+        <!-- <a href="https://github.com/adelasimone" target="_blank">
+            <img class="icons" src="assets/github-alt-brands.svg" alt="Ícone do Github">
+
+        <a href="" target="_blank">
+            <img class="icons" src="" alt="Ícone do Linkedin">
+        </a>
+        <a href="" target="_blank">
+            <img class="icons" src="" alt="Ícone do Gmail">
+        </a> -->
+        <div class="d-flex flex-column flex-md-row justify-content-md-around">
+            <a class="link-sobre" href="https://github.com/adelasimone" target="_blank">
+                <i class="fab fa-github-alt"></i>
+                <span>endereço do github</span>
+            </a>
+            <a class="link-sobre" href="#" target="_blank">
+                <i class="fab fa-linkedin"></i>
+                <span>endereço do linkedin</span>
+            </a>
+            <a class="link-sobre" href="#" target="_blank">
+                <i class="far fa-envelope"></i>
+                <span>endereço do e-mail</span>
+            </a>
+        </div>
+    </section>
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
