--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
         </a> -->
         <div class="d-flex flex-column flex-md-row justify-content-md-around">
             <a class="link-sobre" href="https://github.com/adelasimone" target="_blank">
-                <i class="fab fa-github-alt"></i>
+                <i class="fa-2x fab fa-github-alt"></i>
                 <span>endereço do github</span>
             </a>
             <a class="link-sobre" href="#" target="_blank">
-                <i class="fab fa-linkedin"></i>
+                <i class="fa-2x fab fa-linkedin"></i>
                 <span>endereço do linkedin</span>
             </a>
             <a class="link-sobre" href="#" target="_blank">
-                <i class="far fa-envelope"></i>
+                <i class="fa-2x far fa-envelope"></i>
                 <span>endereço do e-mail</span>
             </a>
         </div>
