Section habilidades concluída

--- a/index.html
+++ b/index.html
@@ -94,52 +94,52 @@
         </div>
     </section>
 
-    <section class="bg-azul d-flex flex-column flex-lg-row justify-content-lg-around text-white text-center">
+    <section class="bg-azul text-white text-center d-flex flex-column flex-lg-row justify-content-lg-around p-4">
 
         <div class="habilidades w-100">
-            <h4 class="m-3">Habilidades</h4>
+            <h4 class="pt-3">Habilidades</h4>
 
-            <div class="icones p-4"><!--vó-->
-                <div class="row"><!--mãe-->
-                    <div class="col"><!--filha-->
+            <div class="icones row justify-content-center m-4">
+                <div>
+                    <div class="col">
                         <i class=" fa-2x fab fa-html5"></i>
                         <p>HTML</p>
                     </div>
-                    <div class="col"><!--filha-->
+                    <div class="col">
                         <i class=" fa-2x fab fa-css3-alt"></i>
                         <p>CSS</p>
                     </div>
-                    <div class="col"><!--filha-->
+                    <div class="col">
                         <i class=" fa-2x fab fa-js-square"></i>
                         <p>JavaScript</p>
                     </div>
                 </div>
 
-                <div class="row"><!--mãe-->
-                    <div class="col"><!--filha-->
+                <div>
+                    <div class="col">
                         <i class=" fa-2x fab fa-bootstrap"></i>
                         <p>Bootstrap</p>
                     </div>
-                    <div class="col"><!--filha-->
+                    <div class="col">
                         <i class=" fa-2x fab fa-git-alt"></i>
                         <p>Git</p>
                     </div>
-                    <div class="col"><!--filha-->
+                    <div class="col">
                         <i class=" fa-2x fab fa-react"></i>
                         <p>React</p>
                     </div>
                 </div>
 
-                <div class="row"> <!--mãe-->
-                    <div class="col"><!--filha-->
+                <div>
+                    <div class="col">
                         <i class=" fa-2x fas fa-tasks"></i>
                         <p>Scrum</p>
                     </div>
-                    <div class="col"><!--filha-->
+                    <div class="col">
                         <i class=" fa-2x fab fa-sass"></i>
                         <p>Sass</p>
                     </div>
-                    <div class="col"><!--filha-->
+                    <div class="col">
                         <i class=" fa-2x fas fa-book"></i>
                         <p>JQuery</p>
                     </div>
