--- a/index.html
+++ b/index.html
@@ -67,30 +67,24 @@
     </header>
 
     <section class="text-center m-4">
-        <h3>Adela Simone</h3>
-        <h5 class="font-italic font-weight-light m-2">Desenvolvedora front-end</h5>
-        <!-- <a href="https://github.com/adelasimone" target="_blank">
-            <img class="icons" src="assets/github-alt-brands.svg" alt="Ícone do Github">
-
-        <a href="" target="_blank">
-            <img class="icons" src="" alt="Ícone do Linkedin">
-        </a>
-        <a href="" target="_blank">
-            <img class="icons" src="" alt="Ícone do Gmail">
-        </a> -->
-        <div class="d-flex flex-column flex-md-row justify-content-md-around">
-            <a class="link-sobre" href="https://github.com/adelasimone" target="_blank">
-                <i class="fa-2x fab fa-github-alt"></i>
-                <span>endereço do github</span>
-            </a>
-            <a class="link-sobre" href="#" target="_blank">
-                <i class="fa-2x fab fa-linkedin"></i>
-                <span>endereço do linkedin</span>
-            </a>
-            <a class="link-sobre" href="#" target="_blank">
-                <i class="fa-2x far fa-envelope"></i>
-                <span>endereço do e-mail</span>
-            </a>
+        <div>
+            <h3 class="font-azul font-weight-bold">Adela Simone</h3>
+            <h5 class="font-italic font-weight-light pb-3 m-2 font-azul">Desenvolvedora front-end</h5>
+    
+            <div class="d-flex flex-column flex-md-row justify-content-md-around ">
+                <a class="link-sobre" href="https://github.com/adelasimone" target="_blank">
+                    <i class="fa-2x fab fa-github-alt"></i>
+                    <span>Github</span>
+                </a>
+                <a class="link-sobre" href="#" target="_blank">
+                    <i class="fa-2x fab fa-linkedin"></i>
+                    <span>Linkedin</span>
+                </a>
+                <a class="link-sobre" href="mailto:adelasimoneac@gmail.com" target="_blank">
+                    <i class="fa-2x far fa-envelope"></i>
+                    <span>E-mail</span>
+                </a>
+            </div>
         </div>
     </section>
 
