Section cards pronta

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- NAV MENU -->
     <nav class="navbar navbar-expand-lg navbar-light bg-azul">
         <div class="container">
             <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
@@ -36,6 +37,7 @@
         </div>
     </nav>
 
+    <!-- CARROSSEL -->
     <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -66,11 +68,12 @@
         </div>
     </header>
 
+    <!-- CONTATOS -->
     <section class="text-center m-4">
         <div>
             <h3 class="font-azul font-weight-bold">Adela Simone</h3>
             <h5 class="font-italic font-weight-light pb-3 m-2 font-azul">Desenvolvedora front-end</h5>
-    
+
             <div class="d-flex flex-column flex-md-row justify-content-md-around ">
                 <a class="link-sobre" href="https://github.com/adelasimone" target="_blank">
                     <i class="fa-2x fab fa-github-alt"></i>
@@ -88,6 +91,7 @@
         </div>
     </section>
 
+    <!-- SOBRE -->
     <section class="bg-azul text-white text-center d-flex flex-column flex-lg-row justify-content-lg-around p-4">
 
         <div class="habilidades w-100">
@@ -154,6 +158,144 @@
             </div>
         </div>
     </section>
+
+    <!-- MODAL -->
+    <section class="diva-mae__card text-center ">
+        <h3>Portfólio</h3>
+        <section class="d-flex row justify-content-around modal-cards m-3">
+            <!-- CARD 1 -->
+            <div class="card text-center m-5" style="width: 18rem;">
+                <img src="assets/wave-4.jpg" class="card-img-top" alt="Imagem projeto 1">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto</h5>
+                    <p class="card-text">Aqui vai um resumo do projeto</p>
+                    <button type="button" class="btn m-3 bg-azul text-white" data-toggle="modal" data-target="#modal1">
+                        Veja mais
+                    </button>
+                </div>
+            </div>
+
+            <!-- Modal 1 -->
+            <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="modal1" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modal1">Nome do projeto</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Aqui tema descrição completa do projeto</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <a href="#" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CARD 2 -->
+            <div class="card text-center m-5 " style="width: 18rem;">
+                <img src="assets/wave-3.jpg" class="card-img-top" alt="Imagem projeto 1">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto</h5>
+                    <p class="card-text">Aqui vai um resumo do projeto</p>
+                    <button type="button" class="btn m-3 bg-azul text-white" data-toggle="modal" data-target="#modal2">
+                        Veja mais
+                    </button>
+                </div>
+            </div>
+
+            <!-- Modal 2 -->
+            <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modal2" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modal2">Nome do projeto</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Aqui tema descrição completa do projeto</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <a href="#" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CARD 3 -->
+            <div class="card text-center m-5 " style="width: 18rem;">
+                <img src="assets/wave-2.jpg" class="card-img-top" alt="Imagem projeto 1">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto</h5>
+                    <p class="card-text">Aqui vai um resumo do projeto</p>
+                    <button type="button" class="btn m-3 bg-azul text-white" data-toggle="modal" data-target="#modal2">
+                        Veja mais
+                    </button>
+                </div>
+            </div>
+
+            <!-- Modal 3 -->
+            <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modal2" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modal2">Nome do projeto</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Aqui tema descrição completa do projeto</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <a href="#" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- CARD 4 -->
+            <div class="card text-center m-5 " style="width: 18rem;">
+                <img src="assets/wave-1.jpg" class="card-img-top" alt="Imagem projeto 1">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto</h5>
+                    <p class="card-text">Aqui vai um resumo do projeto</p>
+                    <button type="button" class="btn m-3 bg-azul text-white" data-toggle="modal" data-target="#modal2">
+                        Veja mais
+                    </button>
+                </div>
+            </div>
+
+            <!-- Modal 4 -->
+            <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="modal2" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modal2">Nome do projeto</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Aqui tema descrição completa do projeto</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            <a href="#" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
