Alterações no html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- NAV MENU -->
     <nav class="navbar navbar-expand-lg navbar-light bg-azul">
         <div class="container">
-            <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
+            <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Re<span class="font-weight-light">programa</span>}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menudesktop"
                 aria-controls="menudesktop" aria-expanded="false" aria-label="Alterna navegação">
                 <span class="navbar-toggler-icon"></span>
@@ -92,7 +92,8 @@
     </section>
 
     <!-- HABILIDADES -->
-    <section class="bg-azul text-white text-center d-flex flex-column flex-lg-row justify-content-lg-around p-4" id="habilidades">
+    <section class="bg-azul text-white text-center d-flex flex-column flex-lg-row justify-content-lg-around p-4"
+        id="habilidades">
 
         <div class="habilidades w-100">
             <h4 class="pt-3">Habilidades</h4>
@@ -147,14 +148,15 @@
         <div class="sobre w-100">
             <h4 class="m-4">Sobre</h4>
             <div class="container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis omnis natus commodi
+                <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis omnis natus commodi
                     repudiandae
                     expedita autem, perspiciatis vero voluptas itaque voluptate ab earum tenetur maiores consectetur
                     assumenda, sint architecto id quia?
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, quia! Earum totam nam autem
                     reprehenderit, possimus molestias, facilis id odit eveniet quo corrupti praesentium, deserunt
                     nulla
-                    voluptas! Exercitationem, sunt sint.</p>
+                    voluptas! Exercitationem, sunt sint.
+                </article>
             </div>
         </div>
     </section>
@@ -297,7 +299,8 @@
     </section>
 
     <footer class="bg-azul text-center text-white">
-        <p>Desenvolvido com Bootstrap por Adela Simone, aluna da {<span class="font-weight-bold">re</span>programa} 2020</p>
+        <p>Desenvolvido com Bootstrap por Adela Simone, aluna da {<span class="font-weight-bold">re</span>programa} 2020
+        </p>
     </footer>
 
     <script src="./js/jquery-3.4.1.min.js"></script>
