Adicionei os link dos projetos

--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
         <section class="row justify-content-around modal-cards m-3">
             <!-- CARD 1 -->
             <div class="card text-center m-5" style="width: 18rem;">
-                <img src="assets/wave-4.jpg" class="card-img-top" alt="Imagem projeto 1">
+                <img src="assets/mundo-gelado.png" class="card-img-top" alt="Imagem projeto 1">
                 <div class="card-body">
-                    <h5 class="card-title">Projeto</h5>
+                    <h5 class="card-title">Mundo gelado</h5>
                     <p class="card-text">Aqui vai um resumo do projeto</p>
                     <button type="button" class="btn m-3 bg-azul text-white" data-toggle="modal" data-target="#modal1">
                         Veja mais
@@ -182,7 +182,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="modal1">Nome do projeto</h5>
+                            <h5 class="modal-title" id="modal1">Mundo gelado</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -192,7 +192,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                            <a href="#" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
+                            <a href="https://mundogelado.netlify.app" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
                         </div>
                     </div>
                 </div>
@@ -200,9 +200,9 @@
 
             <!-- CARD 2 -->
             <div class="card text-center m-5 " style="width: 18rem;">
-                <img src="assets/wave-3.jpg" class="card-img-top" alt="Imagem projeto 1">
+                <img src="assets/todo-list.png" class="card-img-top" alt="Imagem projeto 1">
                 <div class="card-body">
-                    <h5 class="card-title">Projeto</h5>
+                    <h5 class="card-title">To Do list</h5>
                     <p class="card-text">Aqui vai um resumo do projeto</p>
                     <button type="button" class="btn m-3 bg-azul text-white" data-toggle="modal" data-target="#modal2">
                         Veja mais
@@ -215,7 +215,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="modal2">Nome do projeto</h5>
+                            <h5 class="modal-title" id="modal2">To Do list</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                            <a href="#" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
+                            <a href="https://projeto-todo-list.netlify.app" target="_blank" type="button" class="btn bg-azul text-white">Ver página</a>
                         </div>
                     </div>
                 </div>
@@ -299,7 +299,7 @@
     </section>
 
     <footer class="bg-azul text-center text-white">
-        <p>Desenvolvido com Bootstrap por Adela Simone, aluna da {<span class="font-weight-bold">re</span>programa} 2020
+        <p>Desenvolvido com Bootstrap por Adela Simone, aluna da {reprograma} 2020
         </p>
     </footer>
 
